--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,10 @@ jobs:
     steps:
       - name: Copier code Git vers serveur Ubuntu
         uses: actions/checkout@v3
+      - name: Installer nodeJS
+        uses: actions/setup-node@3
+      - name: Installation des packages JS
+        run: npm install
+      - name: Build application JS
+        run: npm run build
         
