--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Copier code Git vers serveur Ubuntu
         uses: actions/checkout@v3
       - name: Installer nodeJS
-        uses: actions/setup-node@3
+        uses: actions/setup-node@v3
       - name: Installation des packages JS
         run: npm install
       - name: Build application JS
