--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,18 @@ name: build
 on: push
 
 jobs:
+  test: 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Copier code Git vers serveur Ubuntu
+        uses: actions/checkout@v3
+      - name: Installer nodeJS
+        uses: actions/setup-node@v3
+      - name: Installation des packages JS
+        run: npm install
+      - name: Build application JS
+        run: npm run build
+
   build:
     runs-on: ubuntu-latest
     steps:
